# gomoku

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: release-windows.yml
scripts/: llm_proxy.mjs
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  engine.rs  llm.rs  main.rs  rating.rs  rules.rs  types.rs  users.rs
src/components/: index.ts
src/components/Board/: Board.tsx
src/components/GamePanel/: ActionButtons.tsx  StatusCard.tsx  index.ts
src/components/Layout/: AppShell.tsx  BackHeader.tsx  TopBar.tsx  index.ts
src/components/Play/: ActionBar.tsx  GameBoard.tsx  GameStatus.tsx  NewGameDialog.tsx  OpponentSelect.tsx  PlayPage.tsx  ResultOverlay.tsx  WatchControls.tsx  index.ts
src/components/Settings/: SettingsCard.tsx  SettingsHome.tsx  index.ts
src/components/Settings/AI/: AIPage.tsx  HeuristicProfiles.tsx  LlmProfileForm.tsx  LlmProfiles.tsx  SelfPlayPanel.tsx  index.ts
src/components/Settings/Data/: DataPage.tsx  ExportPanel.tsx  index.ts
src/components/Settings/Profile/: LadderTable.tsx  MatchSettings.tsx  ProfilePage.tsx  RatingOverview.tsx  index.ts
src/components/Settings/Users/: UserForm.tsx  UserList.tsx  UsersPage.tsx  (+1 more)
src/components/Shared/: Button.tsx  Card.tsx  Chip.tsx  FormField.tsx  Modal.tsx  ProgressBar.tsx  Select.tsx  Table.tsx  index.ts
src/components/Welcome/: WelcomePage.tsx
src/hooks/: index.ts  useAutoPlay.ts  useGame.ts  useNavigation.ts  useRating.ts  useSelfPlay.ts  useUsers.ts
