[package]
name = "gomoku"
version = "0.1.0"
description = "Cross-platform Gomoku"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rayon = "1.10"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["time", "rt"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
